# red_cvision

./: .gitignore  CMakeLists.txt  package.xml  readme.md
calibration_manipulator_cv/: calibration.md
camera_info/: logitech.yaml  logitech0.yaml
launch/: .usb_cam_local_1.launch.swp  ar.launch  usb_cam_local_0.launch  usb_cam_local_1.launch  usb_cam_local_1nofocus.launch  usb_cam_youbot.launch  usb_cam_youbot_0.launch
msg/: Object.msg
scripts/: camera_switch_server.py  pycv_ok.py  pymeasuring.py  talker.py
scripts/addstuff/: cnts1.py  create_contours.py  roi_conours.py  save_cnts.py  save_roi.py
scripts/addstuff/contours/: 1.npz  Motor.npz  ideal_F20_20_B.npz  not need M20.npz
scripts/contours/: blue10.npz  squar50.npz
scripts/libs/: utils.py
scripts/servers/: camera_stop_server.py  camera_task_server.py  start.py
scripts/servers/libs/: line_finder.py  pymeasuring.py  test_th.py  utils.py
scripts/servers/libs/contours/: F20_20_.npz  M.npz  M20_100.npz  Motor.npz  R20.npz  S40_40_.npz  wood.npz
scripts/servers/libs/contours/26/: lego_balk.npz
srv/: CameraListObjects.srv
