<?xml version="1.0"?>
<package>
  <name>red_cvision</name>
  <version>0.0.1</version>
  <description>The red_cvision package</description>

  <maintainer email="kaartemov@gmail.com">Kirill Artemovr</maintainer>
  <license>BSD</license>
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export></export>
</package>
